--- a/MelgaraMurilloJesner_C14644_Tarea_I_IF4101/index.html
+++ b/MelgaraMurilloJesner_C14644_Tarea_I_IF4101/index.html
@@ -38,7 +38,7 @@
     </header>
     <div class="contenido">
         <div class="formulario">
-            <h2> Iniciar sesion</h2>
+            <h2> Iniciar sesión</h2>
             <br>
             <form id="formulario" method="post">
 
@@ -73,24 +73,32 @@
                     <div class="modal-body">
                         <form>
                             <div class="mb-3">
-                                <label for="nombre" class="form-label">Nombre</label>
-                                <input type="text" class="form-control" id="nombre" required>
+                                <label for="nombrePersona" class="form-label">Nombre</label>
+                                <input type="text" class="form-control" id="nombrePersona" required>
                             </div>
                             <div class="mb-3">
-                                <label for="apellidos" class="form-label">Apellidos</label>
-                                <input type="text" class="form-control" id="apellidos" required>
+                                <label for="cedula" class="form-label">Cédula</label>
+                                <input type="text" class="form-control" id="cedula" required>
                             </div>
                             <div class="mb-3">
                                 <label for="nombreUsuario" class="form-label">Nombre de Usuario</label>
                                 <input type="text" class="form-control" id="nombreUsuario" required>
                             </div>
                             <div class="mb-3">
-                                <label for="contrasena" class="form-label">Contraseña</label>
-                                <input type="password" class="form-control" id="contrasena" required>
+                                <label for="contrasenna" class="form-label">Contraseña</label>
+                                <input type="password" class="form-control" id="contrasenna" required>
                             </div>
                             <div class="mb-3">
-                                <label for="correo" class="form-label">Correo Electrónico</label>
-                                <input type="email" class="form-control" id="correo" required>
+                                <label for="correoElectronico" class="form-label">Correo Electrónico</label>
+                                <input type="email" class="form-control" id="correoElectronico" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="tarjetaCredito" class="form-label">Tarjeta de Crédito</label>
+                                <input type="text" class="form-control" id="tarjetaCredito">
+                            </div>
+                            <div class="mb-3">
+                                <label for="cvv" class="form-label">CVV</label>
+                                <input type="text" class="form-control" id="cvv">
                             </div>
                         </form>
                     </div>
@@ -116,7 +124,7 @@
             <a href="https://www.instagram.com/">Instagram</a>
         </div>
         <div class="contenidoFooter">
-            <a href="PoliticaPrivacidadTerminosUso.html">Politica de privacidad y terminos de uso</a>
+            <a href="PoliticaPrivacidadTerminosUso.html">Política de privacidad y términos de uso</a>
             <a href="InformacionContacto.html">Información de contacto</a>
             <a href="SobreNosotros.html">Sobre Nosotros</a>
 
