--- a/MelgaraMurilloJesner_C14644_Tarea_I_IF4101/BusquedaRuta.html
+++ b/MelgaraMurilloJesner_C14644_Tarea_I_IF4101/BusquedaRuta.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/estilo.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="js/FiltrarRutas.js"></script>
 </head>
 
 <body>
@@ -37,20 +38,24 @@
             <div class="formulario">
                 <form id="formularioBusquedaMedico">
                     <div class="contenido-contenedor">
-                        <label>Información:</label>
-                        <input id="datoFiltro" type="text" required placeholder="Información">
+                        <label>Filtrar por Origen:</label>
+                        <input type="text" name="origen" id="origen" placeholder="Origen">
                     </div>
                     <div class="contenido-contenedor">
-                        <label>Filtrar por:</label>
-                        <select name="tipoFiltrado" id="tipoFiltrado">
-                            <option value="Origen">Origen</option>
-                            <option value="Destino">Destino</option>
-                            <option value="Fecha">Fecha</option>
-                            <option value="Horario">Horario</option>
-                        </select>
+                        <label>Filtrar por Destino:</label>
+                        <input type="text" name="destino" id="destino" placeholder="Destino">
+                    </div>
+                    <div class="contenido-contenedor">
+                        <label>Filtrar por Fecha:</label>
+                        <input type="text" name="fecha" id="fecha" placeholder="Fecha">
+                    </div>
+                    <div class="contenido-contenedor">
+                        <label>Filtrar por Horario:</label>
+                        <input type="text" name="horario" id="horario" placeholder="Horario">
                     </div>
                 </form>
-                <input id="botonBusqueda" type="submit" value="Filtrar">
+                <button id="botonBusqueda" type="button">Filtrar</button>
+
             </div>
             <div class="contenido-contenedor">
                 <!-- Botón para abrir el modal -->
@@ -113,27 +118,24 @@
                         </div>
                     </div>
                 </div>
-
-
             </div>
             <div class="contenido-contenedor">
                 <div class="tabla-busqueda">
                     <table class="elementos-tabla">
                         <tr>
+                            <th>Ruta</th>
                             <th>Origen</th>
                             <th>Destino</th>
                             <th>Fecha</th>
                             <th>Horario</th>
                             <th>Información detallada</th>
+                            <th>Comprar</th>
                         </tr>
+                        <tbody class="contenido-tabla" id="contenido-tabla">
+                        </tbody>
                     </table>
-                    <tbody class="contenido-tabla">
-
-                    </tbody>
                 </div>
             </div>
-
-
         </div>
     </div>
     <footer>
@@ -147,7 +149,6 @@
             <a href="PoliticaPrivacidadTerminosUso.html">Politica de privacidad y terminos de uso</a>
             <a href="InformacionContacto.html">Información de contacto</a>
             <a href="SobreNosotros.html">Sobre Nosotros</a>
-
         </div>
         <p>Derechos de autor &copy; 2024 Clínica Árbol de Seda</p>
     </footer>
