--- a/MelgaraMurilloJesner_C14644_Tarea_I_IF4101/index.html
+++ b/MelgaraMurilloJesner_C14644_Tarea_I_IF4101/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/estilo.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="js/conexion.js"></script>
 </head>
 
 <body>
@@ -15,13 +16,13 @@
     <header>
         <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="index.html">Logo</a>
+                <a class="navbar-brand" href="index.html">Autobuses Los Panchos</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#collapsibleNavbar">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                    <ul class="navbar-nav">
+                    <ul class="navbar-nav" style="display: none;" id="menuOpciones">
                         <li class="nav-item">
                             <a class="nav-link" href="BusquedaRuta.html">Busqueda Ruta</a>
                         </li>
@@ -44,7 +45,7 @@
 
                 <div class="usuarios">
                     <label> Cédula de Identidad: </label>
-                    <input id="cedula" type="text" required>
+                    <input id="nombreUsuario" type="text" required>
                 </div>
 
                 <div class="usuarios">
@@ -82,11 +83,11 @@
                             </div>
                             <div class="mb-3">
                                 <label for="nombreUsuario" class="form-label">Nombre de Usuario</label>
-                                <input type="text" class="form-control" id="nombreUsuario" required>
+                                <input type="text" class="form-control" id="nombreUsuarioRegistro" required>
                             </div>
                             <div class="mb-3">
                                 <label for="contrasenna" class="form-label">Contraseña</label>
-                                <input type="password" class="form-control" id="contrasenna" required>
+                                <input type="password" class="form-control" id="contrasennaRegistro" required>
                             </div>
                             <div class="mb-3">
                                 <label for="correoElectronico" class="form-label">Correo Electrónico</label>
@@ -104,9 +105,9 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"
-                            style="background-color: #6D6D6D; border-color: #6D6D6D;">Cerrar</button>
+                            style="background-color: #6D6D6D; border-color: #6D6D6D;" id="CerrarRegistro">Cerrar</button>
                         <button type="button" class="btn btn-primary"
-                            style="background-color: #6D6D6D; border-color: #6D6D6D;">Registrarse</button>
+                            style="background-color: #6D6D6D; border-color: #6D6D6D;" id="RegistrarUsuario">Registrarse</button>
                     </div>
                 </div>
             </div>
