--- a/MelgaraMurilloJesner_C14644_Tarea_I_IF4101/BusquedaRuta.html
+++ b/MelgaraMurilloJesner_C14644_Tarea_I_IF4101/BusquedaRuta.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Autobuses Los Panchos</title>
     <link rel="stylesheet" href="css/estilo.css">
+    <script src="js/FiltrarRutas.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/FiltrarRutas.js"></script>
 </head>
 
 <body>
@@ -33,10 +33,11 @@
             </div>
         </div>
     </nav>
+    
     <div class="container-fluid mt-3">
         <div class="contenido">
             <div class="formulario">
-                <form id="formularioBusquedaMedico">
+                <form id="formularioBusquedaRuta">
                     <div class="contenido-contenedor">
                         <label>Filtrar por Origen:</label>
                         <input type="text" name="origen" id="origen" placeholder="Origen">
@@ -53,16 +54,10 @@
                         <label>Filtrar por Horario:</label>
                         <input type="text" name="horario" id="horario" placeholder="Horario">
                     </div>
+                    <input type="submit" value="Filtrar" id="FiltrarRuta">
                 </form>
-                <button id="botonBusqueda" type="button">Filtrar</button>
-
             </div>
             <div class="contenido-contenedor">
-                <!-- Botón para abrir el modal -->
-                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#reservaModal"
-                    style="background-color: #4f4f4f; color: white; border: none;">
-                    Reservar boletos
-                </button>
 
                 <!-- Modal -->
                 <div class="modal fade" id="reservaModal" tabindex="-1" role="dialog"
@@ -111,13 +106,30 @@
                                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"
                                     style="background-color: #6D6D6D; color: white; border: none;">Cerrar</button>
                                 <button type="button" class="btn btn-primary"
-                                    style="background-color: #6D6D6D; color: white; border: none;">Comprar</button>
+                                    style="background-color: #6D6D6D; color: white; border: none;" id="botonComprar">Comprar</button>
                                 <button type="button" class="btn btn-primary"
-                                    style="background-color: #6D6D6D; color: white; border: none;">Reservar</button>
+                                    style="background-color: #6D6D6D; color: white; border: none;" id="botonReservar">Reservar</button>
                             </div>
                         </div>
                     </div>
                 </div>
+                <!--MODAL DETALLES-->
+                <div class="modal fade" id="detallesModal" tabindex="-1" role="dialog" aria-labelledby="reservaModalLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content" style="background-color: #4f4f4f;">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="reservaModalLabel" style="color: white;">Detalles de la Ruta</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+                            </div>
+                            <div class="modal-body" id="modal-detalle">
+
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" style="background-color: #6D6D6D; color: white; border: none;">Cerrar</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>                
             </div>
             <div class="contenido-contenedor">
                 <div class="tabla-busqueda">
