--- a/MelgaraMurilloJesner_C14644_Tarea_I_IF4101/index.html
+++ b/MelgaraMurilloJesner_C14644_Tarea_I_IF4101/index.html
@@ -29,9 +29,6 @@
                         <li class="nav-item">
                             <a class="nav-link" href="ReservaCompraBoletos.html">Reserva y Compra de Boletos</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="ConfirmacionRerservaBoleto.html">Confirmación de la Reserva</a>
-                        </li>
                     </ul>
                 </div>
             </div>
@@ -44,7 +41,7 @@
             <form id="formulario" method="post">
 
                 <div class="usuarios">
-                    <label> Cédula de Identidad: </label>
+                    <label> Nombre de Usuario: </label>
                     <input id="nombreUsuario" type="text" required>
                 </div>
 
