--- a/MelgaraMurilloJesner_C14644_Tarea_I_IF4101/BusquedaRuta.html
+++ b/MelgaraMurilloJesner_C14644_Tarea_I_IF4101/BusquedaRuta.html
@@ -9,6 +9,9 @@
     <script src="js/FiltrarRutas.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    
 </head>
 
 <body>
@@ -25,9 +28,6 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="ReservaCompraBoletos.html">Reserva y Compra de Boletos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="ConfirmacionRerservaBoleto.html">Confirmación de la Reserva</a>
                     </li>
                 </ul>
             </div>
@@ -60,59 +60,59 @@
             <div class="contenido-contenedor">
 
                 <!-- Modal -->
-                <div class="modal fade" id="reservaModal" tabindex="-1" role="dialog"
-                    aria-labelledby="reservaModalLabel" aria-hidden="true">
-                    <div class="modal-dialog">
-                        <div class="modal-content" style="background-color: #4f4f4f;">
-                            <div class="modal-header">
-                                <h5 class="modal-title" id="reservaModalLabel" style="color: white;">Reserva y Compra de
-                                    Boletos</h5>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                    aria-label="Cerrar"></button>
-                            </div>
-                            <div class="modal-body">
-                                <form>
-                                    <div class="mb-3">
-                                        <label for="asientos" class="form-label" style="color: white;">Número de
-                                            Asiento:</label>
-                                        <input type="number" class="form-control" id="asientos" min="1">
-                                    </div>
-                                    <div class="mb-3">
-                                        <label for="clase" class="form-label" style="color: white;">Clase de
-                                            Servicio:</label>
-                                        <select class="form-select" id="clase">
-                                            <option>Económica</option>
-                                            <option>Premium</option>
-                                            <option>Primera Clase</option>
-                                        </select>
-                                    </div>
-                                    <div class="mb-3">
-                                        <label for="fecha" class="form-label" style="color: white;">Fecha del Asiento
-                                            Disponible:</label>
-                                        <input type="date" class="form-control" id="fecha">
-                                    </div>
-                                    <div class="mb-3">
-                                        <label for="numeroTarjeta" class="form-label" style="color: white;">Número de
-                                            Tarjeta:</label>
-                                        <input type="text" class="form-control" id="numeroTarjeta" required>
-                                    </div>
-                                    <div class="mb-3">
-                                        <label for="cvv" class="form-label" style="color: white;">CVV:</label>
-                                        <input type="text" class="form-control" id="cvv" required>
-                                    </div>
-                                </form>
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"
-                                    style="background-color: #6D6D6D; color: white; border: none;">Cerrar</button>
-                                <button type="button" class="btn btn-primary"
-                                    style="background-color: #6D6D6D; color: white; border: none;" id="botonComprar">Comprar</button>
-                                <button type="button" class="btn btn-primary"
-                                    style="background-color: #6D6D6D; color: white; border: none;" id="botonReservar">Reservar</button>
-                            </div>
+                <div class="modal fade" id="reservaModal" tabindex="-1" role="dialog" aria-labelledby="reservaModalLabel"
+                aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content" style="background-color: #4f4f4f;">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="reservaModalLabel" style="color: white;">Reserva y Compra de Boletos</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+                        </div>
+                        <div class="modal-body">
+                            <form>
+                                <!-- Resto del formulario -->
+                                <div class="mb-3">
+                                    <label for="asientos" class="form-label" style="color: white;">Número de Asiento:</label>
+                                    <input type="number" class="form-control" id="asientos" min="1">
+                                </div>
+                                <div class="mb-3">
+                                    <label for="clase" class="form-label" style="color: white;">Clase de Servicio:</label>
+                                    <select class="form-select" id="clase">
+                                        <option>Económica</option>
+                                        <option>Premium</option>
+                                        <option>Primera Clase</option>
+                                    </select>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="fecha" class="form-label" style="color: white;">Fecha del Asiento
+                                        Disponible:</label>
+                                    <input type="date" class="form-control" id="fecha">
+                                </div>
+                                <div class="mb-3">
+                                    <label for="numeroTarjeta" class="form-label" style="color: white;">Número de Tarjeta:</label>
+                                    <input type="text" class="form-control" id="numeroTarjeta" required>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="cvv" class="form-label" style="color: white;">CVV:</label>
+                                    <input type="text" class="form-control" id="cvv" required>
+                                </div>
+                                 <!-- Agregar el input de tipo checkbox -->
+                                 <div class="mb-3 form-check">
+                                    <input type="checkbox" class="form-check-input" id="checkImprimir">
+                                    <label class="form-check-label" for="checkAsistencia" style="color: white;">Imprimir Compra</label>
+                                </div>
+                            </form>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"
+                                style="background-color: #6D6D6D; color: white; border: none;">Cerrar</button>
+                            <button type="button" class="btn btn-primary"
+                                style="background-color: #6D6D6D; color: white; border: none;" id="botonComprar">Comprar</button>
                         </div>
                     </div>
                 </div>
+                </div>
+
                 <!--MODAL DETALLES-->
                 <div class="modal fade" id="detallesModal" tabindex="-1" role="dialog" aria-labelledby="reservaModalLabel" aria-hidden="true">
                     <div class="modal-dialog">
@@ -129,7 +129,7 @@
                             </div>
                         </div>
                     </div>
-                </div>                
+                </div>
             </div>
             <div class="contenido-contenedor">
                 <div class="tabla-busqueda">
